# polygeist

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: install-build-deps.sh
.github/workflows/: build.yml  nightly-snapshot.yml
lib/polygeist/: Ops.cpp
lib/polygeist/Passes/: CanonicalizeFor.cpp  Mem2Reg.cpp  ParallelLower.cpp
test/: CMakeLists.txt
test/mlir-clang/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.in
test/mlir-clang/polybench/utilities/: polybench.c
test/mlir-clang/verification/: gettimeofday.c  lowerrecur.c  pair.c  pairinit.c  reduction.c  refpair.cpp
test/polygeist-opt/: CMakeLists.txt  lit.site.cfg.py.in
test/polygeist-opt/verification/: canonicalization.mlir  detect-reduction.mlir
tools/mlir-clang/: CMakeLists.txt  mlir-clang.cc
tools/mlir-clang/Lib/: CGStmt.cc  clang-mlir.cc  clang-mlir.h  utils.cc  utils.h
tools/mlir-clang/Test/Verification/: gettimeofday.c  multidim_init.c  pairptr.c
tools/mlir-clang/driver/: cc1_main.cpp  cc1as_main.cpp
tools/polygeist-opt/: CMakeLists.txt
